## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with stage0.  If not, see <http://www.gnu.org/licenses/>.

* Unreleased
** Added
Added write to lisp
Added bootstrapping steps documentation
Added ability to specify amount of Available RAM on a Per run basis, however 16KB is the default

** Changed
Correct lisp High level prototype to include line comments
Changed default RAM to 16KB
Updated bootstrap documentation to match the memory requirements of the individual steps

** Fixed
Fixed missing traces when memory outside of world are accessed when profiling

** Removed

* 0.0.4 - 2017-02-18
** Added
+ Added missing primitives from High level prototype to lisp implementation
+ Improved Eval's debugging messages

** Changed
+ Readline function no longer displays EOF Char should the user terminate input with Ctrl-d

** Fixed
+ Corrected Eval's processing of ASCII type
+ Make IF statements behave correctly
+ Enabled support for negative numbers
+ Properly display Integer Cells with the value of ZERO

** Removed
+ Removed Eval's default behavior of unknown input

* 0.0.3 - 2017-02-17
** Added
+ Added a primitive Lisp implementation in assembly
+ Gave primitive Lisp an exact garbage collector for CELLs (aka everything but strings)
+ Added a concatination program to make dealing with line macros easier for M0-macro programmers

** Changed
+ Enhanced Forth to better fit memory space

** Fixed
Fixed arrangement of spaces in forth to prevent the small input space bug

** Removed

* 0.0.2 - 2016-11-01
** Added
+ Created xeh tool in C for more cross platform debugging
+ Created M0 in hex2
+ Documented build steps in notes.org
+ Imported CMPSKIP instructions that operate on 2 registers
+ Imported CMPJUMP instructions that operate on 3 registers